force-app/main/default/objects/ssot__RgltyCodeRegClauseVer__dlm/fields/ssot__RegulationClVerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulationClVerId__c</fullName>
    <label>Regulation Clause Version</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulationClVerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>