force-app/main/default/objects/ssot__RgltyCodeRegClauseVer__dlm/fields/ssot__RegulatoryCodeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulatoryCodeId__c</fullName>
    <label>Regulatory Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulatoryCodeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>