force-app/main/default/objects/ssot__RgltyCodeRegClauseVer__dlm/fields/ssot__rel_1731659294120_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659294120_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RgltyCodeRegClauseVer_RegulatoryCode_rel</label>
    <referenceTo>ssot__RegulatoryCode__dlm</referenceTo>
    <relationshipLabel>RgltyCodeRegClauseVer_RegulatoryCode_rel</relationshipLabel>
    <relationshipName>rel_1731659294120_end</relationshipName>
    <type>Lookup</type>
</CustomField>