force-app/main/default/objects/ssot__RgltyCodeRegClauseVer__dlm/fields/ssot__rel_1731659307330_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731659307330_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RgltyCodeRegClauseVer_RegulationClVe_rel</label>
    <referenceTo>ssot__RegulationClauseVersion__dlm</referenceTo>
    <relationshipLabel>RgltyCodeRegClauseVer_RegulationClVe_rel</relationshipLabel>
    <relationshipName>rel_1731659307330_end</relationshipName>
    <type>Lookup</type>
</CustomField>